--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "ejs": "^3.0.2",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
-    "jquery": "^3.4.1",
+    "jquery": ">=3.5.0",
     "mongodb": "^3.5.5",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.2",
